[workspace]
resolver = "2"
members = ["tauri"]

[workspace.package]
repository = "https://github.com/zzzgydi/clash-verge.git"
edition = "2021"

[workspace.dependencies]
anyhow = "=1.0.75"
once_cell = "=1.9.0"
log = "=0.4.20"
tokio = { version = "=1.34.0", features = ["full"] }


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
