[package]
name = "delay_timer"
version = "0.11.4"
authors = ["binchengZhao <binchengZhao@outlook.com>"]
edition = "2021"
repository = "https://github.com/BinChengZhao/delay-timer"
documentation = "https://docs.rs/delay_timer"
readme = "README.md"
homepage = "https://github.com/BinChengZhao/delay-timer"
description = "Time-manager of delayed tasks. Like crontab, but synchronous asynchronous tasks are possible, and dynamic add/cancel/remove is supported."
keywords = [ "cron", "scheduler", "timer", "crontab", "delay" ]
license = "Apache-2.0 OR MIT"
categories = ["development-tools", "data-structures", "asynchronous", "data-structures", "accessibility"]
build = "build/build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "delay_timer"

[features]
default = []

full = ["status-report"]
status-report = []


[dependencies]
cron_clock = "0.8.0"
anyhow = { workspace = true }
rs-snowflake = "0.6.0"
dashmap = "^4.0.2"
lru = "^0.12.0"
once_cell = { workspace = true }
futures = "^0.3.13"
smol = "^1.2.5"
concat-idents = "1.1.3"
async-trait = "^0.1.48"
event-listener = "3"
event-listener-strategy = "0.4.0"
log = { workspace = true }
tracing = "0.1.29"
thiserror = "^1.0.24"

str_splitter = "0.1.1"

tokio = { workspace = true }

[dev-dependencies]
delay_timer = { path = ".", features = ["full"] }
rand = "0.8.4"
surf = "^2.1.0"
tracing-error = { version = "0.2.0" }
tracing-subscriber = "0.3.0"
hyper = {version  = "^0.14.2", features = ["full"] }
pretty_env_logger = "^0.5.0"
mockall = "^0.11.0"
env_logger = "^0.10.0"
color-eyre = { version =  "0.6.0", features = ["capture-spantrace", "issue-url"]}
pretty_assertions = "0.7.0"
ansi-parser = "0.8.0" # used for testing color schemes

[dev-dependencies.async-std]
version = "^1.9.0"
features = ["attributes", "unstable"]

[build-dependencies]
autocfg = "1"
rustc_version = "^0.4.0"

# Append the cfg-tag:docsrs to activate the feature(doc_cfg) attribute
# when generating a document on docs.rs.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Whether to pass `--no-default-features` to Cargo (default: false)
no-default-features = true

[package.metadata.playground]
features = ["full", "test-util"]

[[example]]
name = "cycle_tokio_task"
path = "examples/cycle_tokio_task.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"
required-features = ["full"]

#[[test]]
#name = "inspect_struct"
#path = "tests/simulation.rs"
#required-features = ["full"]

#[[bench]]
#name = "demo"
#path = "benches/demo.rs"
#required-features = ["full"]

# [profile.dev.package.backtrace]
# opt-level = 3
