[package]
name = "clash-verge"
version = "0.1.0"
description = "clash verge"
authors = ["zzzgydi"]
license = "GPL-3.0"
repository = "https://github.com/zzzgydi/clash-verge.git"
default-run = "clash-verge"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "=1.5.0", features = [] }

[dependencies]
warp = "=0.3.6"
which = "=4.2.2"
anyhow = { workspace = true }
dirs = "=5.0.0"
open = "=4.0.1"
log = { workspace = true }
ctrlc = "=3.2.3"
dunce = "=1.0.4"
log4rs = "=1.0.0"
nanoid = "=0.4.0"
chrono = "=0.4.19"
sysinfo = "=0.29.10"
sysproxy = "=0.3.0"
rquickjs = "=0.1.7"
serde_json = "=1.0.108"
serde_yaml = "=0.9.27"
auto-launch = "=0.5.0"
once_cell = { workspace = true }
port_scanner = "=0.1.5"
delay_timer = { path = "../delay_timer" }
parking_lot = "=0.12.0"
tokio = { workspace = true }
serde = { version = "=1.0.193", features = ["derive"] }
reqwest = { version = "=0.11.22", features = ["json", "rustls-tls"] }
tauri = { version = "=1.2.4", features = ["global-shortcut-all", "process-all", "shell-all", "system-tray", "updater", "window-all"] }
window-vibrancy = { version = "=0.3.0" }
window-shadows = { version = "=0.2.0" }
wry = { version = "=0.24.3" }


[target.'cfg(windows)'.dependencies]
runas = "=1.1.0"
deelevate = "=0.2.0"
winreg = { version = "=0.50.0", features = ["transactions"] }
windows-sys = { version = "=0.48.0", features = ["Win32_System_LibraryLoader", "Win32_System_SystemInformation"] }

[target.'cfg(windows)'.dependencies.tauri]
features = ["global-shortcut-all", "icon-png", "process-all", "shell-all", "system-tray", "updater", "window-all"]

[target.'cfg(linux)'.dependencies.tauri]
features = ["global-shortcut-all", "process-all", "shell-all", "system-tray", "updater", "window-all", "native-tls-vendored", "reqwest-native-tls-vendored"]


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
verge-dev = []
default-meta = []
